[project]
name = "ivtbot"
version = "0.1.0"
description = "Telegram bot with casino dice game"
authors = [
    {name = "None",email = "kfdjklfjdlfjdlfjdlkjfasdlkfjlkadsjfhldasfhjkdawshfjkasdhf@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.0.0,<4.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
